--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,4 @@
-﻿<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
- -->
-<div class="container">
+﻿<div class="container">
     <div class="row center">
         <img class="wave" src="assets/icons/wave.png">
         <div class="container">
@@ -44,17 +37,9 @@
                                 </div>
                             </div>
                         </div>
-                       
+
                         <input type="submit" class="btn" value="Login">
                         <hr class="mt-4 mb-4">
-                         <!-- <div class="custom-control custom-checkbox mt-3">
-                             <p>
-                                <a class="text-center" routerLink="/forgetpass-component"> <b>Forget Password</b></a>
-                             </p>
-                             <p>
-                                Not Registered? <a class="text-center" routerLink="/signup-component"> <b>Sign up!</b></a>
-                             </p>
-                        </div> -->
                     </form>
                 </div>
             </div>
