--- a/src/app/dashboard/assigned-leads/assigned-leads.component.html
+++ b/src/app/dashboard/assigned-leads/assigned-leads.component.html
@@ -18,7 +18,7 @@
                         </ng-select>
                     </div>
                     <div class="col">
-                        <input class="form-control" id="myInput" type="text" placeholder="Search {{ placeholder }}" [(ngModel)]="refId">
+                        <input class="form-control" type="text" placeholder="Search {{ placeholder }}" [(ngModel)]="refId">
                     </div>
                     <button onclick="window.print()" class="btn btn-primary">Print</button>
                 </div>
@@ -95,7 +95,6 @@
     </div>
 </div>
 
-
 <div class="modal" id="myModal">
     <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
@@ -115,7 +114,7 @@
                         </ng-select>
                     </div>
                     <div class="col">
-                        <input class="form-control" id="myInput" type="text" placeholder="Search {{ placeholder }}" [(ngModel)]="refId2">
+                        <input class="form-control" type="text" placeholder="Search {{ placeholder }}" [(ngModel)]="refId2">
                     </div>
                 </div>
                 <table class="table table-hover">
